Storybookのテンプレートが間違っているため修正する

--- a/app/components/Skeleton/Docs.mdx
+++ b/app/components/Skeleton/Docs.mdx
@@ -1,4 +1,4 @@
-import { Meta, Default, Controls, Story } from '@storybook/blocks';
+import { Meta, Primary, Controls, Story, Primary } from '@storybook/blocks';
 import * as SkeletonStories from './Skeleton.stories';
 
 <Meta of={SkeletonStories} />
@@ -8,7 +8,7 @@ import * as SkeletonStories from './Skeleton.stories';
 任意のサイズのSkeletonを表示するコンポーネントです。
 ユーザーに表示するコンテンツが読み込み中であることを伝えるために利用します。
 
-<Default />
+<Primary />
 
 ## Props
 
