importが重複していたのを修正

--- a/app/components/Skeleton/Docs.mdx
+++ b/app/components/Skeleton/Docs.mdx
@@ -1,4 +1,4 @@
-import { Meta, Primary, Controls, Story, Primary } from '@storybook/blocks';
+import { Meta, Primary, Controls, Story } from '@storybook/blocks';
 import * as SkeletonStories from './Skeleton.stories';
 
 <Meta of={SkeletonStories} />
